@@ -123,6 +123,11 @@ function shiftBlocks(fieldset, previousBlock){
             </div>
 
             <div>
+                <label>title</label>
+                <input type="text" name="stylesheets.title:records" tal:attributes="value stylesheet/title|nothing">    
+            </div>
+
+            <div>
                 <label>rendering</label>
                 <select name="stylesheets.rendering:records">
                     <option tal:repeat="r here/getRenderingOptions" 
