@@ -3,6 +3,12 @@
 0.8 +
 =====================
 
+ * Added tests for attributes on stylesheets. About time. 
+   [elvix]
+
+ * Added title for alternate stylesheets
+   [fschulze]
+
  * Removing superflous skins directories
    [elvix]
 
@@ -12,6 +18,7 @@
 
  * Added bugfix for handling disabled items when cooking stylesheets.
    [fschulze]
+
 
 0.8
 =====================
